# mts-search-employer

./: README.md  docker-compose.yaml  package-lock.json  package.json
backend/: Dockerfile  README.md  app.py  database.db  pyproject.toml
backend/devops/nginx/: nginx.conf
backend/hack_change_backend/: data_generator.py  models.py  schemas.py  utils.py
backend/hack_change_backend/api/: auth.py  data_controller.py  deps.py
backend/hack_change_backend/api/v1/: admin.py  controller.py  filter.py  hierarchy.py
backend/hack_change_backend/core/: abstract.py  config.py  database.py  exceptions.py  lifespan.py  logger.py  middlevare.py  secutity.py
backend/hack_change_backend/data/: city.py  education_type.py  institute.py  position.py  projects.py  skill.py  specialization.py  work_category.py
backend/tests/: __init__.py
frontend/: README.md  package-lock.json
frontend/src/assets/: Footer.css  HeroSection.css  Navbar.css  SearchEmployPage.css
frontend/src/components/: Footer.jsx  HeroSection.jsx  RegisterPage.jsx  SearchEmployPage.jsx
src/: App.jsx  index.css
src/assets/: AboutSection.css  HeroSection.css  LoginPage.css  ProfilePage.css  RegisterPage.css  SearchEmployPage.css
src/components/: AboutSection.jsx  HeroSection.jsx  LoginPage.jsx  Navbar.jsx  ProfilePage.jsx  RegisterPage.jsx  SearchEmployPage.jsx
